--- a/app/index.html
+++ b/app/index.html
@@ -133,11 +133,11 @@
                                 <div class="overflow">
                                     <div class="heading-outer left-right relative">
                                         <div class="heading-outer top-bottom relative">
-                                            <div class="overflow p-t-40 p-l-40 p-r-40 p-b-40">
+                                            <div class="overflow p-t-40 p-l-10 p-r-10 p-b-40">
                                                 <div class="section-heading-outer">
                                                     <h1 class="heading head--h1-test">
                                                         <span class="color">LORATEX</span>
-                                                        <br>La sécurité des instalations à risque d'explosion<br>par la formation
+                                                        <br>La sécurité des instalations<br>à risque d'explosion<br>par la formation
                                                     </h1>
                                                 </div>
                                             </div>
@@ -625,7 +625,7 @@
 
                                         <div class="overflow m-t-40 m-b-20">
                                             <div class="profile-outer">
-                                                <span class="name">Missions de conseil pour les utilisateurs</span>
+                                                <span class="name">Pour les utilisateurs</span>
                                             </div>
                                         </div>
 
@@ -654,7 +654,7 @@
 
                                         <div class="overflow m-t-40 m-b-20">
                                             <div class="profile-outer">
-                                                <span class="name">Missions de conseil pour les fabricants</span>
+                                                <span class="name">Pour les fabricants</span>
                                             </div>
                                         </div>
 
@@ -675,7 +675,7 @@
 
                                             <div class="overflow m-t-40 m-b-20">
                                                 <div class="profile-outer">
-                                                    <span class="name">Missions diverses ISM-ATEX, SAQR-ATEX</span>
+                                                    <span class="name">ISM-ATEX, SAQR-ATEX</span>
                                                 </div>
                                             </div>
 
