--- a/app/index.html
+++ b/app/index.html
@@ -227,7 +227,7 @@
                             </div>
                             <div class="overflow">
                                 <div class="section-heading-outer p-l-50 p-r-50">
-                                    <h2 class="section-heading wow">Nous dispensons des formations pour l'ensemble de vos équipes.</h2>
+                                    <h2 class="section-heading wow">Nous dispensons des formations<br>pour l'ensemble de vos équipes</h2>
                                 </div>
                             </div>
                         </div>
@@ -607,7 +607,7 @@
                             </div>
                             <div class="overflow">
                                 <div class="section-heading-outer p-l-50 p-r-50">
-                                    <h2 class="section-heading wow">Nous vous conseillons quelque soit votre profil</h2>
+                                    <h2 class="section-heading wow">Nous vous conseillons<br>quelque soit votre profil</h2>
                                 </div>
                             </div>
                         </div>
@@ -740,7 +740,7 @@
                             </div>
                             <div class="overflow">
                                 <div class="section-heading-outer p-l-50 p-r-50">
-                                    <h2 class="section-heading wow">Nos documents à votre disposition.</h2>
+                                    <h2 class="section-heading wow">Nos documents<br>à votre disposition</h2>
                                 </div>
                             </div>
                         </div>
@@ -957,7 +957,7 @@
                             </div>
                             <div class="overflow">
                                 <div class="section-heading-outer p-l-50 p-r-50">
-                                    <h2 class="section-heading wow">Nos missions EXplosive.</h2>
+                                    <h2 class="section-heading wow">Nos missions EXplosive</h2>
                                 </div>
                             </div>
                         </div>
@@ -1545,7 +1545,7 @@
                         <div class="clearfix"></div>
 
                         <div class="col-sm-12 grid-item m-t-30">
-                            <div class="row ">
+                            <div class="row lorateam">
 
                                 <div class="col-md-3 col-sm-6 col-xs-12 each-item overflow text-center relative wow ">
                                     <div class="item-inner overflow absolute">
