--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@
 
                                 <div class="overflow m-t-30">
                                     <div class="list-view">
-                                        <ul class="nav">
+                                        <ul class="nav home-nav--centre">
                                             <li><a class="btn-mask" href="#formation">FORMATIONS</a></li>
                                             <li><a class="btn-mask" href="#conseil">CONSEILS</a></li>
                                             <li><a class="btn-mask" href="#document">DOCUMENTS</a></li>
