--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@
 
                                 <div class="overflow m-t-30">
                                     <div class="list-view">
-                                        <ul class="nav home-nav--centre">
+                                        <ul class="nav">
                                             <li><a class="btn-mask" href="#formation">FORMATIONS</a></li>
                                             <li><a class="btn-mask" href="#conseil">CONSEILS</a></li>
                                             <li><a class="btn-mask" href="#document">DOCUMENTS</a></li>
@@ -214,7 +214,7 @@
 
                                     <div class="overflow">
                                         <div class="title-outer wow">
-                                            <h4 class="title formation--titre-taille">Matériel non électrique</h4>
+                                            <h4 class="title ">Matériel non électrique</h4>
                                         </div>
                                     </div>
                                     <div class="overflow">
@@ -236,7 +236,7 @@
 
                                     <div class="overflow">
                                         <div class="title-outer wow">
-                                            <h4 class="title formation--titre-taille">Matériel électrique</h4>
+                                            <h4 class="title ">Matériel électrique</h4>
                                         </div>
                                     </div>
                                     <div class="overflow">
@@ -258,7 +258,7 @@
 
                                     <div class="overflow">
                                         <div class="title-outer wow">
-                                            <h4 class="title formation--titre-taille">Sécurité Intrinsèque
+                                            <h4 class="title ">Sécurité Intrinsèque
                                             </h4>
                                         </div>
                                     </div>
@@ -281,7 +281,7 @@
 
                                     <div class="overflow">
                                         <div class="title-outer wow">
-                                            <h4 class="title formation--titre-taille">Réparation</h4>
+                                            <h4 class="title ">Réparation</h4>
                                         </div>
                                     </div>
                                     <div class="overflow">
@@ -730,7 +730,7 @@
 
                                     <div class="overflow m-t-15">
                                         <div class="title-outer">
-                                            <h6 class="title relative missionEx--titre-police">POUR LES UTILISATEURS</h6>
+                                            <h4 class="title relative missionEx--titre-police">Pour les utilisateurs</h4>
                                         </div>
                                     </div>
 
@@ -749,7 +749,7 @@
 
                                     <div class="overflow m-t-15">
                                         <div class="title-outer ">
-                                            <h6 class="title relative missionEx--titre-police">POUR LES FABRICANTS</h6>
+                                            <h4 class="title relative missionEx--titre-police">Pour les fabricants</h4>
                                         </div>
                                     </div>
 
@@ -765,7 +765,7 @@
 
                                     <div class="overflow m-t-15">
                                         <div class="title-outer">
-                                            <h6 class="title relative missionEx--titre-police">ISM-ATEX, SAQR-ATEX</h6>
+                                            <h4 class="title relative missionEx--titre-police">ISM-ATEX, SAQR-ATEX</h4>
                                         </div>
                                     </div>
 
@@ -781,8 +781,6 @@
                             </div> <!-- End: Content Text Area -->
 
                         </div> <!-- End: Content section -->
-
-
 
 
                         <div class="col-xs-12 m-t-30">
@@ -847,9 +845,7 @@
 
                                     <div class="overflow">
                                         <div class="title-outer wow">
-                                            <h4 class="title formation--titre-taille">Documents Fabricants
-
-                                            </h4>
+                                            <h4 class="title ">Documents Fabricants</h4>
                                         </div>
                                     </div>
                                     <div class="overflow">
@@ -899,7 +895,7 @@
 
                                         <div class="overflow">
                                             <div class="title-outer wow">
-                                                <h4 class="title formation--titre-taille">Documents Divers</h4>
+                                                <h4 class="title ">Documents Divers</h4>
                                             </div>
                                         </div>
                                         <div class="overflow">
@@ -954,7 +950,7 @@
 
                                         <div class="overflow">
                                             <div class="title-outer wow">
-                                                <h4 class="title formation--titre-taille">Documents Utilisateurs
+                                                <h4 class="title ">Documents Utilisateurs
 
                                                 </h4>
                                             </div>
@@ -982,7 +978,7 @@
 
                                             <div class="overflow">
                                                 <div class="title-outer wow">
-                                                    <h4 class="title formation--titre-taille">Loratex dans la Presse</h4>
+                                                    <h4 class="title ">Loratex dans la Presse</h4>
                                                 </div>
                                             </div>
                                             <div class="overflow">
