--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
 
                     <!-- TEMPLATE LOGO LIGHT -->
                     <a class="navbar-brand light-logo btn-scroll nav--lien-padding" href="#accueil">
-                        <img src="images/logo.png" alt="" class="img-responsive nav--img-taille">
+                        <img src="images/logo.svg" alt="" class="img-responsive nav--img-taille">
                     </a>
 
                 </div>
@@ -118,7 +118,7 @@
 
                                 <div class="overflow m-t-30">
                                     <div class="list-view">
-                                        <ul class="nav">
+                                        <ul class="nav nav--liste-centrer">
                                             <li><a class="btn-mask" href="#formation">FORMATIONS</a></li>
                                             <li><a class="btn-mask" href="#conseil">CONSEILS</a></li>
                                             <li><a class="btn-mask" href="#document">DOCUMENTS</a></li>
@@ -146,7 +146,7 @@
 
                                     <!-- TEMPLATE LOGO LIGHT -->
                                     <a class="navbar-brand light-logo home--img-padding" href="#accueil">
-                                        <img src="images/logo.png" alt="Logo Loratex" class="img-responsive">
+                                        <img src="images/logo.svg" alt="Logo Loratex" class="img-responsive">
                                     </a>
 
                                 </div>
@@ -1806,7 +1806,7 @@
                                         <div class="overflow">
                                             <div class="logo-outer wow">
                                                 <a href="index.html" class="logo-link">
-                                                    <img src="images/logo.png" alt="" class="img-responsive logo">
+                                                    <img src="images/logo.svg" alt="" class="img-responsive logo">
                                                 </a>
                                             </div>
                                         </div>
