--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,13 @@
 
     <body class="style-1">
 
+        <!-- TODO :
+        - Descrition de Bruno
+        - Changer le doc fabricant : Evolution des normes
+        - Mettre à jour les taux de satisfaction..
+        - Photos supplémentaires pour activer le bloc intervention
+        - Photo de la description de Bruno -->
+
         <!-- Start: Preloader Section
         =================================== -->
 
@@ -55,7 +62,7 @@
                     </button>
 
                     <!-- TEMPLATE LOGO LIGHT -->
-                    <a class="navbar-brand light-logo btn-scroll nav--lien-padding" href="#accueil">
+                    <a class="navbar-brand light-logo btn-scroll nav-sticky__img" href="#accueil">
                         <img src="images/logo.svg" alt="" class="img-responsive nav--img-taille">
                     </a>
 
@@ -145,8 +152,8 @@
                                 <div class="navbar-header">
 
                                     <!-- TEMPLATE LOGO LIGHT -->
-                                    <a class="navbar-brand light-logo home--img-padding" href="#accueil">
-                                        <img src="images/logo.svg" alt="Logo Loratex" class="img-responsive">
+                                    <a class="navbar-brand light-logo hero__img-link" href="#accueil">
+                                        <img src="images/logo.svg" alt="Logo Loratex" class="img-responsive hero__img">
                                     </a>
 
                                 </div>
@@ -154,7 +161,7 @@
                                 <div class="navbar-collapse-right" >
                                     <ul class="nav navbar-nav navbar-right btn-scroll">
                                         <li>
-                                            <a class="btn-nav btn-mask" href="#contact-us-section">Contact<i class="icon icon-arrow-right"></i></a>
+                                            <a class="btn-nav btn-mask hero__contact-link" href="#contact-us-section">Contact<i class="icon icon-arrow-right"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -307,7 +314,7 @@
                                     </div>
                                     <div class="overflow">
                                         <div class="pera-outer wow">
-                                            <p>Acquérir un savoir - afin de conseiller, acheter ou proposer un matériel relatif aux atmosphères explosibles concernant le mode de protection sécurité intrinsèque. </p>
+                                            <p>Obtenir les compétences pour réparer un matériel relatif aux atmosphères explosibles. </p>
                                         </div>
                                     </div>
                                     <div class="overflow m-t-15">
@@ -357,21 +364,21 @@
                                             </div>
 
                                             <div class="overflow">
-                                                <div class="pera-outer">
-                                                    <p><i>
-                                                        <b> Objectif : </b>Obtenir les compétences pour intervenir en zone ATEX. <br>
-                                                        <b> Méthode : </b>Exposés audiovisuels, support technique remis aux participants.
-                                                    </i></p>
+                                                <div class="pera-outer formation__title-wrapper">
+                                                    <p>
+                                                        <b> Formation ISM-ATEX </b>
+                                                        <img class="formation__ism-atex" src="images/ism.png" alt="">
+                                                    </p>
                                                 </div>
                                             </div>
 
                                             <div class="overflow">
                                                 <div class="pera-outer">
-                                                    <p>
+                                                    <p><i>
                                                         Cette formation est réalisée dans le cadre du référentiel ISM-ATEX de l’INERIS avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX de l’INERIS. <br>
                                                         <b> Taux de réussite : </b>97% <br>
                                                         <b> Taux de satisfaction : </b>80%
-                                                    </p>
+                                                    </i></p>
                                                 </div>
                                             </div>
 
@@ -438,21 +445,21 @@
                                             </div>
 
                                             <div class="overflow">
-                                                <div class="pera-outer">
+                                                <div class="pera-outer formation__title-wrapper">
                                                     <p>
-                                                        <b> Objectif : </b>Acquérir un savoir-faire pour assurer la maintenance d’un matériel ou d’une installation de matériels non électrique en atmosphères explosibles. <br>
-                                                        <b> Méthode : </b>Exposés audiovisuels, support technique remis aux participants.
+                                                        <b> Formation ISM-ATEX </b>
+                                                        <img class="formation__ism-atex" src="images/ism.png" alt="">
                                                     </p>
                                                 </div>
                                             </div>
 
                                             <div class="overflow">
                                                 <div class="pera-outer">
-                                                    <p>
+                                                    <p><i>
                                                         Cette formation est réalisée dans le cadre du référentiel ISM-ATEX de l’INERIS avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX de l’INERIS. <br>
                                                         <b> Taux de réussite : </b>97% <br>
                                                         <b> Taux de satisfaction : </b>80%
-                                                    </p>
+                                                    </i></p>
                                                 </div>
                                             </div>
 
@@ -540,21 +547,21 @@
                                             </div>
 
                                             <div class="overflow">
-                                                <div class="pera-outer">
+                                                <div class="pera-outer formation__title-wrapper">
                                                     <p>
-                                                        <b> Objectif : </b>Acquérir un savoir-faire pour assurer la maintenance d’un matériel ou d’une installation de matériels non électrique en atmosphères explosibles. <br>
-                                                        <b> Méthode : </b>Exposés audiovisuels, support technique remis aux participants.
+                                                        <b> Formation ISM-ATEX </b>
+                                                        <img class="formation__ism-atex" src="images/ism.png" alt="">
                                                     </p>
                                                 </div>
                                             </div>
 
                                             <div class="overflow">
                                                 <div class="pera-outer">
-                                                    <p>
+                                                    <p><i>
                                                         Cette formation est réalisée dans le cadre du référentiel ISM-ATEX de l’INERIS avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX de l’INERIS. <br>
                                                         <b> Taux de réussite : </b>97% <br>
                                                         <b> Taux de satisfaction : </b>80%
-                                                    </p>
+                                                    </i></p>
                                                 </div>
                                             </div>
 
@@ -642,21 +649,21 @@
                                             </div>
 
                                             <div class="overflow">
-                                                <div class="pera-outer">
+                                                <div class="pera-outer formation__title-wrapper">
                                                     <p>
-                                                        <b> Objectif : </b>Acquérir un savoir-faire pour assurer la maintenance d’un matériel ou d’une installation de matériels électrique et non électrique en atmosphères explosibles. <br>
-                                                        <b> Méthode : </b>Exposés audiovisuels, support technique remis aux participants.
+                                                        <b> Formation ISM-ATEX </b>
+                                                        <img class="formation__ism-atex" src="images/ism.png" alt="">
                                                     </p>
                                                 </div>
                                             </div>
 
                                             <div class="overflow">
                                                 <div class="pera-outer">
-                                                    <p>
+                                                    <p><i>
                                                         Cette formation est réalisée dans le cadre du référentiel ISM-ATEX de l’INERIS avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX de l’INERIS. <br>
                                                         <b> Taux de réussite : </b>97% <br>
                                                         <b> Taux de satisfaction : </b>80%
-                                                    </p>
+                                                    </i></p>
                                                 </div>
                                             </div>
 
@@ -744,21 +751,20 @@
                                             </div>
 
                                             <div class="overflow">
-                                                <div class="pera-outer">
+                                                <div class="pera-outer formation__title-wrapper">
                                                     <p>
-                                                        <b> Objectif : </b>Acquérir un savoir-faire pour assurer la maintenance d’un matériel ou d’une installation de matériels non électrique en atmosphères explosibles. <br>
-                                                        <b> Méthode : </b>Exposés audiovisuels, support technique remis aux participants.
+                                                        <b> Formation SARQ-ATEX </b>
+                                                        <img class="formation__saqr-atex" src="images/saqr.jpeg" alt="">
                                                     </p>
                                                 </div>
                                             </div>
 
                                             <div class="overflow">
                                                 <div class="pera-outer">
-                                                    <p>
-                                                        Cette formation est réalisée dans le cadre du référentiel ISM-ATEX de l’INERIS avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX de l’INERIS. <br>
-                                                        <b> Taux de réussite : </b>97% <br>
+                                                    <p><i>
+                                                        Cette formation est réalisée dans le cadre du référentiel SAQR-ATEX de l’INERIS avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX de l’INERIS. <br>
                                                         <b> Taux de satisfaction : </b>80%
-                                                    </p>
+                                                    </i></p>
                                                 </div>
                                             </div>
 
@@ -767,14 +773,14 @@
                                                     <div class="list col-sm-12">
                                                         <a target="_blank" href="pdf/formations/Formation Réparation/FORMATION LOF-Saqr-Atex PA 2022.pdf">
                                                             <div class="row">
-                                                                <i class="icon icon-icon-search-alt"></i> Formation des agents et personnes autorisées à la réparation des matériels en atmosphères explosibles SAQR-ATEX et recyclage des compétences
+                                                                <i class="icon icon-icon-search-alt"></i> Formation du personnel des ateliers de réparation des matériels ATEX et préparation à la certification SAQR-ATEX
                                                             </div>
                                                         </a>
                                                     </div>
                                                     <div class="list col-sm-12">
                                                         <a target="_blank" href="pdf/formations/Formation Réparation/FORMATION LOF-Saqr_ATEX recy-PA 2022.pdf">
                                                             <div class="row">
-                                                                <i class="icon icon-icon-search-alt"></i> Formation du personnel des ateliers de réparation des matériels ATEX et préparation à la certification SAQR-ATEX
+                                                                <i class="icon icon-icon-search-alt"></i> Formation des agents et personnes autorisées à la réparation des matériels en atmosphères explosibles SAQR-ATEX et recyclage des compétences
                                                             </div>
                                                         </a>
                                                     </div>
@@ -885,7 +891,7 @@
                                         <div class="pera-outer missionEx--liste-style">
                                             <ul>
                                                 <li class="conseil--liste-decoration" >Aide à la certification ATEX des matériels</li>
-                                                <li class="conseil--liste-decoration" >Analyse de risque selon la norme EN 13463-1</li>
+                                                <li class="conseil--liste-decoration" >Analyse de risque selon la norme 80079-36</li>
                                                 <li class="conseil--liste-decoration" >Dépot de dossier ATEX pour les appareils catégorie 2 non électrique</li>
                                             </ul>
                                         </div>
@@ -985,7 +991,7 @@
                                         <div class="btn-form-outer wow">
                                             <a href="pdf/documents/Directive_Atex_2014_34_UE_fr.pdf" target="_blank" class="btn right-icon btn-mask">
                                                 <i class="icon icon-icon-documents-alt document--icon-marge"></i>
-                                                Transposition Française directive Europeenne 94/9 CE
+                                                Transposition Française directive Europeenne 2014/34/UE
                                             </a>
                                         </div>
                                         <!-- <div class="btn-form-outer wow">
@@ -1047,7 +1053,7 @@
                                             <div class="btn-form-outer wow">  <!-- Button Area -->
                                                 <a href="pdf/documents/Divers/Referentiel-SAQR-ATEX 9.0.pdf" target="_blank" class="btn right-icon btn-mask">
                                                     <i class="icon icon-icon-documents-alt features-icon document--icon-marge"></i>
-                                                    Référentiel Saqr-ATEX V7 2022
+                                                    Référentiel Saqr-ATEX V9 2022
                                                 </a>
                                             </div>
                                             <div class="btn-form-outer wow">  <!-- Button Area -->
@@ -1330,7 +1336,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="link-list overflow wow">
+                                                <!-- <div class="link-list overflow wow">
                                                     <div class="link one overflow">
                                                         <div class="inner">
                                                             <a class="btn btn-project-detail right-icon btn-mask" href="#" data-element="project-detail">DETAILS <i class="icon icon-arrow-right"></i></a>
@@ -1342,7 +1348,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="line hidden-xs"></div>
-                                                </div>
+                                                </div> -->
                                             </div>
 
                                             <div class="col-md-10 col-md-offset-1 col-sm-12 slider-outer">
@@ -1486,7 +1492,7 @@
 
                                         <div class="profile-outer center">
                                             <div class="profile-image">
-                                                <img src="images/testimonial/1.jpg" alt="Team Member" class="">
+                                                <img src="images/testimonial/1.jpg" alt="Team Member">
                                             </div>
                                             <div class="profile-content">
                                                 <span class="name">BRUNO DELAURIER</span>
@@ -1494,7 +1500,7 @@
                                             </div>
                                         </div>
                                         <div class="content-detail">
-                                            <p>Bruno est le fondateur et PDG de Loratex. Il mène l'entreprise au succès avec son expérience et ses compétences.</p>
+                                            <p>Bruno est le fondateur et gérant de Loratex. </p>
                                         </div>
 
                                     </div>
