last retours Bruno

--- a/app/index.html
+++ b/app/index.html
@@ -36,11 +36,10 @@
     <body class="style-1">
 
         <!-- TODO :
-        - Descrition de Bruno
         - Changer le doc fabricant : Evolution des normes
-        - Mettre à jour les taux de satisfaction..
         - Photos supplémentaires pour activer le bloc intervention
-        - Photo de la description de Bruno -->
+        - Photo de la description de Bruno
+        - https://www.scaleway.com/en/dedibox/ -->
 
         <!-- Start: Preloader Section
         =================================== -->
@@ -375,9 +374,9 @@
                                             <div class="overflow">
                                                 <div class="pera-outer">
                                                     <p><i>
-                                                        Cette formation est réalisée dans le cadre du référentiel ISM-ATEX de l’INERIS avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX de l’INERIS. <br>
-                                                        <b> Taux de réussite : </b>97% <br>
-                                                        <b> Taux de satisfaction : </b>80%
+                                                        Cette formation est réalisée dans le cadre du référentiel ISM-ATEX avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX. <br>
+                                                        <b> Taux de réussite 2021 : </b>100% <br>
+                                                        <b> Taux de satisfaction 2021 : </b>97%
                                                     </i></p>
                                                 </div>
                                             </div>
@@ -457,8 +456,8 @@
                                                 <div class="pera-outer">
                                                     <p><i>
                                                         Cette formation est réalisée dans le cadre du référentiel ISM-ATEX de l’INERIS avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX de l’INERIS. <br>
-                                                        <b> Taux de réussite : </b>97% <br>
-                                                        <b> Taux de satisfaction : </b>80%
+                                                        <b> Taux de réussite 2021 : </b>95% <br>
+                                                        <b> Taux de satisfaction 2021 : </b>95%
                                                     </i></p>
                                                 </div>
                                             </div>
@@ -475,21 +474,21 @@
                                                     <div class="list col-sm-12">
                                                         <a target="_blank" href="pdf/formations/Formation ATEX électrique/FORMATION LOF-SENS-ATEX recy niv 1E 2022.pdf">
                                                             <div class="row">
-                                                                <i class="icon icon-icon-search-alt"></i> Recyclage des agents et personnes autorisées sur les matériels ATEX électriques niv. 1E
+                                                                <i class="icon icon-icon-search-alt"></i> Recyclage des agents intervenants sur les matériels ATEX électriques niv. 1E
                                                             </div>
                                                         </a>
                                                     </div>
                                                     <div class="list col-sm-12">
                                                         <a target="_blank" href="pdf/formations/Formation ATEX électrique/FORMATION LOF-ISM-ATEX niv 2E 2022.pdf">
                                                             <div class="row">
-                                                                <i class="icon icon-icon-search-alt"></i> Formation des agents et personnes autorisées sur les installations électriques, services et maintenance ATEX niv. 2E
+                                                                <i class="icon icon-icon-search-alt"></i> Formation des personnes autorisées sur les installations électriques, services et maintenance ATEX niv. 2E
                                                             </div>
                                                         </a>
                                                     </div>
                                                     <div class="list col-sm-12">
                                                         <a target="_blank" href="pdf/formations/Formation ATEX électrique/FORMATION LOF-ISM-ATEX recy niv 2E 2022.pdf">
                                                             <div class="row">
-                                                                <i class="icon icon-icon-search-alt"></i> Recyclage des agents et personnes autorisées sur les installations électriques, services et maintenance ATEX niv. 2E
+                                                                <i class="icon icon-icon-search-alt"></i> Recyclage des personnes autorisées sur les installations électriques, services et maintenance ATEX niv. 2E
                                                             </div>
                                                         </a>
                                                     </div>
@@ -559,8 +558,8 @@
                                                 <div class="pera-outer">
                                                     <p><i>
                                                         Cette formation est réalisée dans le cadre du référentiel ISM-ATEX de l’INERIS avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX de l’INERIS. <br>
-                                                        <b> Taux de réussite : </b>97% <br>
-                                                        <b> Taux de satisfaction : </b>80%
+                                                        <b> Taux de réussite 2021 : </b>100% <br>
+                                                        <b> Taux de satisfaction 2021 : </b>100%
                                                     </i></p>
                                                 </div>
                                             </div>
@@ -661,8 +660,8 @@
                                                 <div class="pera-outer">
                                                     <p><i>
                                                         Cette formation est réalisée dans le cadre du référentiel ISM-ATEX de l’INERIS avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX de l’INERIS. <br>
-                                                        <b> Taux de réussite : </b>97% <br>
-                                                        <b> Taux de satisfaction : </b>80%
+                                                        <b> Taux de réussite 2021: </b>94% <br>
+                                                        <b> Taux de satisfaction 2021: </b>95%
                                                     </i></p>
                                                 </div>
                                             </div>
@@ -753,7 +752,7 @@
                                             <div class="overflow">
                                                 <div class="pera-outer formation__title-wrapper">
                                                     <p>
-                                                        <b> Formation SARQ-ATEX </b>
+                                                        <b> Formation SAQR-ATEX </b>
                                                         <img class="formation__saqr-atex" src="images/saqr.jpeg" alt="">
                                                     </p>
                                                 </div>
@@ -762,8 +761,8 @@
                                             <div class="overflow">
                                                 <div class="pera-outer">
                                                     <p><i>
-                                                        Cette formation est réalisée dans le cadre du référentiel SAQR-ATEX de l’INERIS avec évaluation des stagiaires et obtention d’un certificat de compétence ATEX de l’INERIS. <br>
-                                                        <b> Taux de satisfaction : </b>80%
+                                                        Cette formation est réalisée dans le cadre du référentiel SAQR-ATEX de l’INERIS avec évaluation des stagiaires. <br>
+                                                        <b> Taux de satisfaction 2021: </b>95%
                                                     </i></p>
                                                 </div>
                                             </div>
@@ -1500,7 +1499,7 @@
                                             </div>
                                         </div>
                                         <div class="content-detail">
-                                            <p>Bruno est le fondateur et gérant de Loratex. </p>
+                                            <p>Bruno est le fondateur et gérant de Loratex, depuis 2005 il a formé plus de 4000 personnes sur la problématique ATEX et a audité plus de 200 entreprises entre les entreprises SAQR ATEX, ISM ATEX, les fabricant de matériels ATEX et les utilisateurs. </p>
                                         </div>
 
                                     </div>
@@ -1544,7 +1543,7 @@
                                 </div>
                                 <div class="overflow">
                                     <div class="section-heading-outer p-l-50 p-r-50">
-                                        <h2 class="section-heading wow">Parlez nous de votre projet</h2>
+                                        <h2 class="section-heading wow">Parlez nous de votre besoin</h2>
                                     </div>
                                 </div>
                             </div>
