Add meta description

--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,11 @@
 
         <!-- Meta -->
         <meta charset="utf-8">
+        <meta content="IE=edge" http-equiv="X-UA-Compatible">
 
         <!-- TITLE OF SITE -->
         <title>Loratex</title>
+        <meta content="Formations et conseils dans le domaine des atmosphères explosibles, ISM-ATEX, SAQR-ATEX." name="description">
 
         <!-- GOOGLE FONTS -->
         <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,900' rel='stylesheet' type='text/css'>
@@ -34,7 +36,6 @@
     <body class="style-1">
 
         <!-- TODO :
-        - Changer le doc fabricant : Evolution des normes
         - Photos supplémentaires pour activer le bloc intervention
         - Photo de la description de Bruno
         - https://www.scaleway.com/en/dedibox/ -->
