--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
                                                     </div>
                                                 </div>
 
-                                                <!-- <div class="link-list overflow wow">
+                                                <div class="link-list overflow wow">
                                                     <div class="link one overflow">
                                                         <div class="inner">
                                                             <a class="btn btn-project-detail right-icon btn-mask" href="#" data-element="project-detail">DETAILS <i class="icon icon-arrow-right"></i></a>
@@ -1345,7 +1345,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="line hidden-xs"></div>
-                                                </div> -->
+                                                </div>
                                             </div>
 
                                             <div class="col-md-10 col-md-offset-1 col-sm-12 slider-outer">
