Change wording and add CGV

--- a/app/index.html
+++ b/app/index.html
@@ -112,7 +112,7 @@
                                                 <div class="section-heading-outer">
                                                     <h1 class="heading head--h1-test">
                                                         <span class="color">LORATEX</span>
-                                                        <br>La sécurité des instalations<br>à risque d'explosion<br><span class="">par la formation</span>
+                                                        <br>La sécurité des installations<br>à risque d'explosion<br><span class="">par la formation</span>
                                                     </h1>
                                                 </div>
                                             </div>
@@ -1071,6 +1071,12 @@
                                                     Certificats de formateur - auditeur Saqr-ATEX 2022
                                                 </a>
                                             </div>
+                                            <div class="btn-form-outer wow">  <!-- Button Area -->
+                                                <a href="pdf/documents/Divers/CGV-Loratex_2022.pdf" target="_blank" class="btn right-icon btn-mask">
+                                                    <i class="icon icon-icon-documents-alt features-icon document--icon-marge"></i>
+                                                    Conditions générales de ventes 2022
+                                                </a>
+                                            </div>
                                         </div>
 
                                     </div>
@@ -1387,7 +1393,7 @@
 
                                                             <div class="overflow">
                                                                 <div class="heading-outer">
-                                                                    <h2 class="heading">Audits des instalations</h2>
+                                                                    <h2 class="heading">Audits des installations</h2>
                                                                 </div>
                                                             </div> <!-- End: .overflow -->
 
@@ -1670,7 +1676,7 @@
                                                         </li>
                                                         <li class="overflow">
                                                                 <div class="li-inner wow">
-                                                                    <a href="#" class="btn-mask">- Mentions Légales -</a>
+                                                                    <a href="pdf/documents/Divers/CGV-Loratex_2022.pdf" class="btn-mask">- CGV 2022 -</a>
                                                                 </div>
                                                             </li>
                                                     </ul>
