Add signin doc and change CGV

--- a/app/index.html
+++ b/app/index.html
@@ -1072,9 +1072,15 @@
                                                 </a>
                                             </div>
                                             <div class="btn-form-outer wow">  <!-- Button Area -->
-                                                <a href="pdf/documents/Divers/CGV-Loratex_2022.pdf" target="_blank" class="btn right-icon btn-mask">
+                                                <a href="pdf/documents/Divers/CGV_Loratex_2022.pdf" target="_blank" class="btn right-icon btn-mask">
                                                     <i class="icon icon-icon-documents-alt features-icon document--icon-marge"></i>
                                                     Conditions générales de ventes 2022
+                                                </a>
+                                            </div>
+                                            <div class="btn-form-outer wow">  <!-- Button Area -->
+                                                <a href="pdf/documents/Divers/Modalités d'inscription - Loratex.pdf" target="_blank" class="btn right-icon btn-mask">
+                                                    <i class="icon icon-icon-documents-alt features-icon document--icon-marge"></i>
+                                                    Modalités d'inscription
                                                 </a>
                                             </div>
                                         </div>
@@ -1274,16 +1280,16 @@
 
                             <!-- Video area -->
                             <div class="col-md-8 col-md-offset-2">
-                                    <div class="features-image-outer missionEx--video-marge">
-                                        <div class="image-outer ">
-                                            <video width="100%" controls src="video/Mission_EXplosive_LORATEX.mp4" preload="none" poster="images/Mission_Ex-Background_video.png">
-                                                Votre navigateur ne permet pas de lire les vidéos.
-                                                Mais vous pouvez toujours
-                                                <a href="video/MIission_EXplosive_LORATEX.mp4">la télécharger</a> !
-                                            </video>
-                                        </div>
+                                <div class="features-image-outer missionEx--video-marge">
+                                    <div class="image-outer ">
+                                        <video width="100%" controls src="video/Mission_EXplosive_LORATEX.mp4" preload="none" poster="images/Mission_Ex-Background_video.png">
+                                            Votre navigateur ne permet pas de lire les vidéos.
+                                            Mais vous pouvez toujours
+                                            <a href="video/MIission_EXplosive_LORATEX.mp4">la télécharger</a> !
+                                        </video>
                                     </div>
-                                </div> <!-- End: Video Area -->
+                                </div>
+                            </div> <!-- End: Video Area -->
 
                         </div> <!-- End: Content section -->
 
@@ -1298,7 +1304,7 @@
 
 
 
-            <!--Start: 5rd Section
+        <!--Start: 6rd Section
             - INTERVENTIONS
         ====================================-->
         <div class=" section section-item dark-background section--color-dark" id="portfolio-section">
@@ -1451,13 +1457,13 @@
             </div> <!-- End: .inner-container -->
 
         </div>
-        <!--End: 5th Section
+        <!--End: 6th Section
             - INTERVENTIONS
         ====================================-->
 
 
 
-        <!--Start: 6th Section
+        <!--Start: 7th Section
             - NOTRE EQUIPE
         ====================================-->
         <div class=" section section-item combine-section hide-overlay overflow semi-dark-background section--color-light" id="team-section">
@@ -1517,13 +1523,13 @@
             </div> <!-- End: .inner-container -->
 
         </div>
-        <!--End: 5th Section
+        <!--End: 7th Section
             - NOTRE EQUIPE
         ====================================-->
 
 
 
-        <!--Start: 7th Section
+        <!--Start: 8th Section
             - CONTACT US PAGE
         ====================================-->
         <div class=" section section-item combine-section hide-overlay overflow wow section--color-light" id="contact-us-section">
@@ -1675,10 +1681,10 @@
                                                             </div>
                                                         </li>
                                                         <li class="overflow">
-                                                                <div class="li-inner wow">
-                                                                    <a href="pdf/documents/Divers/CGV-Loratex_2022.pdf" class="btn-mask">- CGV 2022 -</a>
-                                                                </div>
-                                                            </li>
+                                                            <div class="li-inner wow">
+                                                                <a href="pdf/documents/Divers/CGV_Loratex_2022.pdf" class="btn-mask">- CGV 2022 -</a>
+                                                            </div>
+                                                        </li>
                                                     </ul>
 
                                                 </div>
@@ -1728,7 +1734,7 @@
             </div>
 
         </div>
-        <!--End: 6th Section
+        <!--End: 8th Section
             - CONTACT US PAGE
         ====================================-->
 
